gcc/testsuite/rust/rustc/ui/issues/issue-15207.rs
fn main() {
    loop {
        break.push(1) // { dg-error ".E0599." "" { target *-*-* } }
        ;
    }
}

